# WGPUF

./: CMakeLists.txt
Application/: Adapter.h  AppWindow.cpp  AppWindow.h  Device.cpp  Device.h  Events.h  WGPUFramework.cpp  WGPUFramework.h
Cameras/: Camera.h  TurnTableCamera.h
GraphicObjects/: Buffer.cpp  Buffer.h  BufferLayout.h
GraphicObjects/Textures/: Texture.h  Texture2D.cpp  Texture2D.h  Texture3D.h
Mixins/: Movable.h  Uncopyable.h
Pipeline/: BindGroup.h  RenderPipeline.cpp  RenderPipeline.h  RenderPipelineBuilder.cpp  RenderPipelineBuilder.h  Shader.cpp  Shader.h
utilities/: Logging.h  Object3D.cpp  Object3D.h  Timer.h
